Prova del nuovo test